syntax="proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/go-park-mail-ru/2025_2_Avrora/internal/delivery/grpc/auth";

package auth;

message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string email = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string email = 2;
}

message LogoutResponse {
    string message = 1;
    string token = 2;
}

// message CheckTokenRequest {
//     string token = 1;
// }

// message CheckTokenResponse {
//     bool valid = 1;
// }

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(google.protobuf.Empty) returns (LogoutResponse);
    // rpc CheckToken(CheckTokenRequest) returns (CheckTokenResponse);
}